compiler/testData/diagnostics/testsWithStdLib/coroutines/suspensionPointInMonitorNewInf.diag.txt
/suspensionPointInMonitorNewInf.kt:18:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:22:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:25:30: error: the 'suspensionPoint' suspension point is inside a critical section
        synchronized(lock, { suspensionPoint() })
                             ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:37:13: error: the 'suspensionPoint' suspension point is inside a critical section
            suspensionPoint()
            ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:44:9: error: the 'suspensionPoint' suspension point is inside a critical section
        suspensionPoint()
        ^^^^^^^^^^^^^^^
/suspensionPointInMonitorNewInf.kt:53:45: error: the 'returnsInt' suspension point is inside a critical section
                    return@synchronized 1 + returnsInt()
                                            ^^^^^^^^^^

